Elastic: small alignment fix

--- a/skins/elastic/swipe.less
+++ b/skins/elastic/swipe.less
@@ -8,7 +8,7 @@
 #listoptions-menu {
   overflow-y: auto;
   margin: -0.5em -1em;
-  padding: .8em 1em;
+  padding: .75em 1.25em;
 
   &::-webkit-scrollbar {
     -webkit-appearance: none;
